Fixed dark mode

--- a/src/components/panels/hero/hero-panel.scss
+++ b/src/components/panels/hero/hero-panel.scss
@@ -192,7 +192,7 @@ html[data-theme="dark"] {
 			.overview-tile {
 				&.clickable {
 					&:hover {
-						background-color: rgb(22, 119, 255);
+						background-color: rgba(22, 119, 255, 0.2);
 					}
 				}
 			}
