--- a/src/components/panels/stats-row/stats-row.scss
+++ b/src/components/panels/stats-row/stats-row.scss
@@ -45,7 +45,7 @@ html[data-theme="dark"] {
 
 		&.clickable {
 			&:hover {
-				background: rgb(80, 80, 80);
+				background: rgba(22, 119, 255, 0.2);
 			}
 		}
 	}
